--- a/templates/persona/success.html
+++ b/templates/persona/success.html
@@ -7,9 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form method="post"> {% csrf_token %}
-        {{form.as_p}}
-        <input type="submit" value="Submit">
-    </form>
+    <h1>Felicitaciones!</h1>
+    <h3>Se guardó correctamente el empleado</h3>
 </body>
 </html>
