--- a/templates/persona/update.html
+++ b/templates/persona/update.html
@@ -7,9 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <form method="post"> {% csrf_token %}
+    <h1>Modificar empleado</h1>
+    <form method="POST">{% csrf_token %}
         {{form.as_p}}
-        <input type="submit" value="Submit">
+        <button type="submit">Guardar cambios</button>
     </form>
 </body>
 </html>
