--- a/templates/persona/delete.html
+++ b/templates/persona/delete.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <form method="post"> {% csrf_token %}
-        {{form.as_p}}
-        <input type="submit" value="Submit">
+    <h2>Confirme eliminacion del empleado</h2>
+    <form method="POST"> {% csrf_token %}
+        <button type="submit">Eliminar</button>
     </form>
 </body>
 </html>
